# tw_data_accelerated

./: .gitignore  pyproject.toml  readme.md  tasks.py  todo.txt
docker/: airflow_entrypoint.sh  docker-compose.yml  docker-compose.yml.jinja  entrypoint.sh  kafka_kraft_server.properties  proxy-entrypoint.sh  proxy.Dockerfile  spark.Dockerfile  spark_entrypoint.sh
docker/dockerfiles/: kafka_broker.Dockerfile  proxy.Dockerfile  spark.Dockerfile
kafka_training/: readme.md  tasks.py
kafka_training/docker/: docker-compose.yml.jinja  entrypoint.sh  kafka_broker.Dockerfile  proxy-entrypoint.sh  proxy.Dockerfile
kafka_training/scripts/: pyproject.toml  tasks.py
scripts/: agg_functions.py  pyproject.toml  tasks.py  timestamps_and_math.py
scripts/kafka_training/: tasks.py
scripts/spark_training/: tasks.py
scripts/spark_training/data/students/: student.json
scripts/spark_training/exercises/data_visualisation/: visualisation.py
scripts/spark_training/exercises/wrangling_basics/: agg_functions.py  dtf_reader.py  emissions.py  joins.py  spark_functions.py  timestamps_and_math.py  udfs.py
scripts/wrangling_basics/: udfs.py
spark_training/: readme.md  tasks.py
spark_training/docker/: docker-compose.yml.jinja  entrypoint.sh  proxy.Dockerfile  spark.Dockerfile
spark_training/scripts/: pyproject.toml  tasks.py
spark_training/scripts/data_visualisation/: visualisation.py
spark_training/scripts/wrangling_basics/: dtf.py  dtf_reader.py  emissions.py  joins.py  spark_functions.py
